0.1_demo/L0/app/src/main/java/com/example/fileSystem/error/noLoad.java
package com.example.fileSystem.error;

public class noLoad extends error {
    public noLoad(String message) {
        super(message);
    }
}
